--- a/Data/catstyle_talk.ipynb
+++ b/Data/catstyle_talk.ipynb
@@ -358,55 +358,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "id": "41890a63",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'한국 사람들과 고양이는, 냥, 컴퓨터를 좋아할까냥?'"
+       "'이아기하고, 냥, 싶으신가요?'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_cat_style_by_pos('한국 사람들과 저는 컴퓨터를 좋아할까요?')"
+    "make_cat_style_by_pos('이아기하고 싶으신가요?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 131,
    "id": "264f403f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('나', 'Noun'),\n",
-       " ('랑', 'Josa'),\n",
+       "[('이', 'Determiner'),\n",
+       " ('아기', 'Noun'),\n",
+       " ('하고', 'Josa'),\n",
        " (' ', 'Space'),\n",
-       " ('곽태경', 'Noun'),\n",
-       " ('이랑', 'Josa'),\n",
-       " (' ', 'Space'),\n",
-       " ('컴퓨터', 'Noun'),\n",
-       " ('를', 'Josa'),\n",
-       " (' ', 'Space'),\n",
-       " ('좋아할까', 'Adjective'),\n",
-       " ('요', 'Noun'),\n",
+       " ('싶으신', 'Verb'),\n",
+       " ('가요', 'Noun'),\n",
+       " ('?', 'Punctuation'),\n",
        " (' ', 'Space')]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "add_space_and_pos('나랑 곽태경이랑 컴퓨터를 좋아할까요')"
+    "add_space_and_pos('이아기하고 싶으신가요?')"
    ]
   },
   {
